--- a/Views/Articles/Create.cshtml
+++ b/Views/Articles/Create.cshtml
@@ -2,45 +2,53 @@
 
 
 
+@section scripts
+    {
+    <script src="https://cloud.tinymce.com/stable/tinymce.min.js"></script>
+    <script src="@Url.Content("~/assets/js/initTinyMCE().js")"></script>
+}
 
 
-
-<hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-12">
         <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+
+            <!--Input for title-->
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
+
+            <!--Textarea for content-->
             <div class="form-group">
                 <label asp-for="Content" class="control-label"></label>
-                <input asp-for="Content" class="form-control" />
+                <textarea asp-for="Content" rows="15" placeholder="Môžete začať písat..."></textarea>
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Date" class="control-label"></label>
-                <input asp-for="Date" class="form-control" />
-                <span asp-validation-for="Date" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="checkbox" id="demo-copy" name="demo-copy">
 
-                <label for="demo-copy">
-                    <input asp-for="Publised" />
-                </label>
 
+
+
+            <!--Chekbox, to be published -->
+            <div class="form-control">
+
+                @Html.CheckBoxFor(m => m.Publised)
+                <label for="Publised">Publikovať</label>
             </div>
+
+            <!--"Save" button-->
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Vytvoriť" class="button primary" />
             </div>
         </form>
     </div>
 </div>
 
+
+<!--"Back" button -->
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Späť</a>
 </div>
 
