--- a/Views/Articles/Delete.cshtml
+++ b/Views/Articles/Delete.cshtml
@@ -2,9 +2,8 @@
 
 
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Ste si istý že tento článok chcete vymazať?</h3>
 <div>
-    <h4>Article</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -17,20 +16,15 @@
             @Html.DisplayNameFor(model => model.Content)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Content)
+           @Html.Raw(Model.Preview)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Date)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Date)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Publised)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Publised)
-        </dd>
+        </dd>     
+       
     </dl>
     
     <form asp-action="Delete">
