--- a/Views/Articles/Edit.cshtml
+++ b/Views/Articles/Edit.cshtml
@@ -1,44 +1,40 @@
 ﻿@model Hasici.Web.Article
 
 
-@{
-    ViewData["Title"] = "Články";
-
+@section scripts
+    {
+    <script src="https://cloud.tinymce.com/stable/tinymce.min.js"></script>
+    <script src="@Url.Content("~/assets/js/initTinyMCE().js")"></script>
 }
 
-<h4>@ViewData["Title"]</h4>
+<h2>@ViewData["Title"]</h2>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-12">
         <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
+
+            <!--Input for title-->
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
-            
-            
+
+            <!--Textarea for content-->
             <div class="form-group">
-
-
                 <label asp-for="Content" class="control-label"></label>
-                <textarea asp-for="Content" name="Content" id="Content" cols="30" rows="10" placeholder="Môžete začať písat..."></textarea>
+                <textarea asp-for="Content" rows="15" placeholder="Môžete začať písat..."></textarea>
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Date" class="control-label"></label>
-                <input asp-for="Date" class="form-control" />
-                <span asp-validation-for="Date" class="text-danger"></span>
-            </div>
 
-            <div class="form-group">
-                <span asp-validation-for="Publised" class="text-danger"></span>
-                <input checked="@(Model.Publised ? "checked" : "" )"  asp-for="Publised" id="published" name="published" type="checkbox" />
-                <label for="published"> <strong>Má byť článok publikovaný? </strong> </label>
-            </div>
+            <!--Chekbox, checked to be puslished-->
+            <div class="form-control">
 
+                @Html.CheckBoxFor(m => m.Publised)
+                <label for="Publised">Publikovať</label>
+            </div>
+                                   
+            <!--"Save" button-->
             <div class="form-group">
                 <input type="submit" value="Save" class="button primary" />
             </div>
@@ -46,6 +42,8 @@
     </div>
 </div>
 
+
+<!--"Back" button-->
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
