--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,27 +1,23 @@
 ﻿@using Hasici.Web
 @model Hasici.Web.Article
 
-@{
 
-    ViewData["Title"] = "DHZ Suchá Hora";
-}
+<section id="banner">
+    <div class="content">
+        <h1>@Html.DisplayFor(model => model.Title)</h1>
+
+        @Html.Raw(Model.Preview)     
+        <div>
+            <a asp-controller="Articles" asp-action="Details" asp-route-id="@Model.Id" class="button left">Čítať ďalej</a>
+        </div>
+    </div>
+    <a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+</section>
 
 
+<hr />
+
+<!-- last articles -->
 <div>
-    <h1>@Html.DisplayFor(model => model.Title)</h1>
-
-
-    <p>@Html.DisplayFor(model => model.Content)</p>
-
-    <div>
-        <a asp-controller="Articles" asp-action="Details" asp-route-id="@Model.Id" class="button left">Čítať ďalej</a>
-    </div>
-
-    <hr class="major">
-
-    <div>
-        @await Component.InvokeAsync(nameof(RecentlyAddedArticles), new { numberOfArticles = 4 })
-    </div>
-
-
+    @await Component.InvokeAsync(nameof(RecentlyAddedArticles), new { numberOfArticles = 4 })
 </div>
