--- a/wwwroot/assets/css/main.css
+++ b/wwwroot/assets/css/main.css
@@ -3567,3 +3567,8 @@ input, select, textarea {
 			margin-top: 0;
 			padding-top: 0;
 		}
+
+.container {
+    display: flex;
+    justify-content: center;
+}
