--- a/Views/Shared/_newLayout.cshtml
+++ b/Views/Shared/_newLayout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE HTML>
+﻿@using Hasici.Web
+
+
+<!DOCTYPE HTML>
 <!--
     Editorial by HTML5 UP
     html5up.net |
@@ -35,15 +38,15 @@
                         <li><a href="https://www.facebook.com/hasicish/" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
                     </ul>
                 </header>
-                
+
                 <div>
                     @RenderBody()
                 </div>
-                 
-                   
+
+
 
                 <!-- Section -->
-                
+
 
             </div>
         </div>
@@ -51,11 +54,15 @@
         <!-- Sidebar -->
         <div id="sidebar">
             <div class="inner">
-
-              
-
-                <!-- Menu -->
                 <nav id="menu">
+
+                    
+                        @await Component.InvokeAsync(nameof(UserPanel))
+                    
+
+                    <hr />
+                    <!-- Menu -->
+
                     <header class="major">
                         <h2>Menu</h2>
                     </header>
@@ -73,7 +80,7 @@
                             </ul>
                         </li>
                         <li><a href="#">Etiam Dolore</a></li>
-                        <li><a href="#">Adipiscing</a></li>                       
+                        <li><a href="#">Adipiscing</a></li>
                     </ul>
                 </nav>
 
@@ -117,7 +124,7 @@
 
 
 
-   
+
 
 
 </body>
